--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url     : # the base hostname & protocol for your site e.g. https://www.someone.
 baseurl : # does not include hostname
 title   : Cky's website
 description: > # this means to ignore newlines until "Language & timezone"
-  Your Site Description
+  A website for cky.
 
 
 ## => Language and Timezone
